--- a/_posts/2021-01-13-blog.md
+++ b/_posts/2021-01-13-blog.md
@@ -1,14 +1,14 @@
 ---
 title: 'Spring-boot: make a simple web app for student information management'
 date: 2021-01-13
-permalink: /posts/2021/01/blog-post-1/
+permalink: /posts/2021/01/blog-1/
 tags:
   - Java
   - MySQL
   - Spring-boot
 ---
 
-[This blog posted on CSDN](https://blog.csdn.net/Jianxin_YU/article/details/112533549?spm=1001.2014.3001.5501)
+[This blog posted on CSDN](https://blog.csdn.net/Jianxin_YU/article/details/112533549)
 
 # spring-boot 搭建简单web app 学生信息管理系统  
 源码：[https://github.com/Mvp-Evan/student_management_system_webapp.git](https://github.com/Mvp-Evan/student_management_system_webapp.git)
